--- a/form.html
+++ b/form.html
@@ -10,32 +10,28 @@
         <img src="http://placehold.it/86x35" width="86" height="35" alt="Мишка лого" title="Мишка лого">
       </div>
       <nav class="main-nav main-nav--closed">
-        <div class="main-nav__burger-menu"></div>
-        <div class="main-nav__inner">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a href="#" title="Каталог товаров">Каталог товаров</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#" title="Вязание на заказ">Вязание на заказ</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#" title="Поиск по сайту">Поиск по сайту</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#" title="Корзина">Корзина: пока пуста</a>
-            </li>
-          </ul>
-        </div>
+        <button class="main-nav__burger-menu main-nav__burger-menu--burger-tap"></button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a href="#" title="Каталог товаров">Каталог товаров</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="#" title="Вязание на заказ">Вязание на заказ</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="#" title="Поиск по сайту">Поиск по сайту</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="#" title="Корзина">Корзина: пока пуста</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
     <main class="main-inner">
       <section class="form">
         <h1>Вязание на заказ</h1>
-        <div class="form__epilog">
-          <p>Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-        </div>
+        <p>Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
         <form method="post">
           <fieldset>
             <legend>Тип</legend>
@@ -72,20 +68,18 @@
             <legend>Доп</legend>
             <textarea name="additional">Опишите все ваши пожелания к заказу</textarea>
           </fieldset>
-          <span>*Поля обязательны для заполнения</span>
+          <p>*Поля обязательны для заполнения</p>
           <input type="submit" class="btn" value="Отправить заказ">
         </form>
       </section>
     </main>
 
     <footer class="page-footer">
-      <div class="contacts__social">
-        <ul>
-          <li class="igm-social"><a href="#" title="Инстаграм"></a></li>
-          <li class="fb-social"><a href="#" title="Фейсбук"></a></li>
-          <li class="tw-social"><a href="#" title="Твиттер"></a></li>
-        </ul>
-      </div>
+      <ul class="contacts__social">
+        <li class="contacts__social-block contacts__social-block--igm"><a href="#" title="Инстаграм"></a></li>
+        <li class="contacts__social-block contacts__social-block--fb"><a href="#" title="Фейсбук"></a></li>
+        <li class="contacts__social-block contacts__social-block--tw"><a href="#" title="Твиттер"></a></li>
+      </ul>
       <div class="contacts__dev">
         <a href="#" title="">Разработано</a>
       </div>
