--- a/catalog.html
+++ b/catalog.html
@@ -36,45 +36,33 @@
             <img src="http://placehold.it/260x195" title="Зайчик-попрыгайчик" alt="Зайчик-попрыгайчик">
           </a>
           <div class="catalog__product-info">
-            <a href="#" title="Зайчик-попрыгайчик">
-              <p class="catalog__product-title">Зайчик-попрыгайчик</p>
-            </a>
+            <a href="#" title="Зайчик-попрыгайчик">Зайчик-попрыгайчик</a>
             <p class="catalog__product-text">Рост 30 см, вес 200 г</p>
           </div>
           <div class="catalog__price">1 200 руб.</div>
-          <a href="#" title="Зайчик-попрыгайчик">
-            <div class="catalog__bucket"></div>
-          </a>
+          <a href="#" class="catalog__bucket" title="Зайчик-попрыгайчик"></a>
         </div>
         <div class="catalog__item">
           <a href="#" title="Корзинка для белья">
             <img src="http://placehold.it/260x195" title="Корзинка для белья" alt="Корзинка для белья">
           </a>
           <div class="catalog__product-info">
-            <a href="#" title="Корзинка для белья">
-              <p class="catalog__product-title">Корзинка для белья</p>
-            </a>
+            <a href="#" title="Корзинка для белья">Корзинка для белья</a>
             <p class="catalog__product-text">Диаметр 15 см, высота 10 см</p>
           </div>
           <div class="catalog__price">690 руб.</div>
-          <a href="#" title="Корзинка для белья">
-            <div class="catalog__bucket"></div>
-          </a>
+          <a href="#" class="catalog__bucket" title="Зайчик-попрыгайчик"></a>
         </div>
         <div class="catalog__item">
           <a href="#" title="Большая корзинка для игрушек">
             <img src="http://placehold.it/260x195" title="Большая корзинка для игрушек" alt="Большая корзинка для игрушек">
           </a>
           <div class="catalog__product-info">
-            <a href="#" title="Большая корзинка для игрушек">
-              <p class="catalog__product-title">Большая корзинка для игрушек</p>
-            </a>
+            <a href="#" title="Большая корзинка для игрушек">Большая корзинка для игрушек</a>
             <p class="catalog__product-text">Диаметр 30 см, высота 30 см</p>
           </div>
           <div class="catalog__price">1 500 руб.</div>
-          <a href="#" title="Большая корзинка для игрушек">
-            <div class="catalog__bucket"></div>
-          </a>
+          <a href="#" class="catalog__bucket" title="Зайчик-попрыгайчик"></a>
         </div>
       </section>
       <section class="process">
@@ -83,9 +71,7 @@
           <img src="http://placehold.it/260x150" alt="Заглушка для видео" title="Заглушка для видео">
           <button class="video-btn"></button>
         </div>
-        <div class="process__text">
-          <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        </div>
+        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
         <a class="btn" href="#" title="Сделать заказ">Сделать заказ</a>
       </section>
 
