--- a/form.html
+++ b/form.html
@@ -40,12 +40,12 @@
           </fieldset>
           <fieldset>
             <legend>Цвет</legend>
-            <input type="checkbox" name="color" id="white" checked><label>Белый</label>
-            <input type="checkbox" name="color" id="grey" checked><label>Серый</label>
-            <input type="checkbox" name="color" id="tiffany"><label>«Тиффани»</label>
-            <input type="checkbox" name="color" id="black"><label>Черный</label>
-            <input type="checkbox" name="color" id="pink"><label>Розовый</label>
-            <input type="checkbox" name="color" id="orange"><label>Оранжевый</label>
+            <input type="checkbox" name="color" id="white" checked><label for="white">Белый</label>
+            <input type="checkbox" name="color" id="grey" checked><label for="grey">Серый</label>
+            <input type="checkbox" name="color" id="tiffany"><label for="tiffany">«Тиффани»</label>
+            <input type="checkbox" name="color" id="black"><label for="black">Черный</label>
+            <input type="checkbox" name="color" id="pink"><label for="pink">Розовый</label>
+            <input type="checkbox" name="color" id="orange"><label for="orange">Оранжевый</label>
           </fieldset>
           <fieldset>
             <legend>ФИО</legend>
