--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
         <div class="weekend-product__info">
           <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
           <ul class="weekend-product__desc">
-            <li class="weekend-product__desc-item">Цвет</li>
-            <li class="weekend-product__desc-item">«Тиффани»/серый</li>
-            <li class="weekend-product__desc-item">Диаметр:</li>
-            <li class="weekend-product__desc-item">25 см</li>
-            <li class="weekend-product__desc-item">Высота:</li>
-            <li class="weekend-product__desc-item">15 см</li>
+            <li class="weekend-product__desc-item">
+              <div>Цвет</div>
+              <div>«Тиффани»/серый</div>
+            </li>
+            <li class="weekend-product__desc-item">
+              <div>Диаметр:</div>
+              <div>25 см</div>
+            </li>
+            <li class="weekend-product__desc-item">
+              <div>Высота:</div>
+              <div>15 см</div>
+            </li>
           </ul>
           <img src="http://placehold.it/260x315" title="Товар недели" alt="Товар недели">
           <span class="weekend-product__price">Цена: 990 руб.</span>
@@ -87,10 +93,14 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <ul class="contacts__desc">
-          <li class="contacts__desc-item">e-mail:</li>
-          <li class="contacts__desc-item">адрес:</li>
-          <li class="contacts__desc-item">адрес:</li>
-          <li class="contacts__desc-item">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</li>
+          <li class="contacts__desc-item">
+            <div>e-mail:</div>
+            <div><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></div>
+          </li>
+          <li class="contacts__desc-item">
+            <div>адрес:</div>
+            <div>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</div>
+          </li>
         </ul>
         <div class="contacts__map">
           <img src="http://placehold.it/320x457" title="" alt="">
