--- a/form.html
+++ b/form.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="/css/style.css"
   </head>
   <body>
     <header class="page-header">
       <div class="page-header__logo">
-        <img src="http://placehold.it/86x35" width="86" height="35" alt="Мишка лого" title="Мишка лого">
+        <a href="/" title="Мишка - главная страница">
+          <img src="img/logo-mobile.svg" width="86" height="35" alt="Мишка лого" title="Мишка лого">
+        </a>
       </div>
       <nav class="main-nav main-nav--closed">
         <button class="main-nav__burger-menu main-nav__burger-menu--burger-tap"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a href="#" title="Каталог товаров">Каталог товаров</a>
+            <a href="catalog.html" title="Каталог товаров">Каталог товаров</a>
           </li>
           <li class="main-nav__item">
             <a href="#" title="Вязание на заказ">Вязание на заказ</a>
@@ -75,12 +78,12 @@
     </main>
 
     <footer class="page-footer">
-      <ul class="contacts__social">
-        <li class="contacts__social-block contacts__social-block--igm"><a href="#" title="Инстаграм"></a></li>
-        <li class="contacts__social-block contacts__social-block--fb"><a href="#" title="Фейсбук"></a></li>
-        <li class="contacts__social-block contacts__social-block--tw"><a href="#" title="Твиттер"></a></li>
+      <ul class="page-footer__social">
+        <li class="page-footer__social-block page-footer__social-block--igm"><a href="#" title="Инстаграм"></a></li>
+        <li class="page-footer__social-block page-footer__social-block--fb"><a href="#" title="Фейсбук"></a></li>
+        <li class="page-footer__social-block page-footer__social-block--tw"><a href="#" title="Твиттер"></a></li>
       </ul>
-      <div class="contacts__dev">
+      <div class="page-footer__dev">
         <a href="#" title="">Разработано</a>
       </div>
     </footer>
