--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="/css/style.css"
   </head>
   <body>
     <header class="page-header">
       <div class="page-header__logo">
-        <img src="http://placehold.it/86x35" width="86" height="35" alt="Мишка лого" title="Мишка лого">
+        <img src="img/logo-mobile.svg" width="86" height="35" alt="Мишка лого" title="Мишка лого">
       </div>
       <nav class="main-nav main-nav--closed">
         <button class="main-nav__burger-menu main-nav__burger-menu--burger-tap"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a href="#" title="Каталог товаров">Каталог товаров</a>
+            <a href="catalog.html" title="Каталог товаров">Каталог товаров</a>
           </li>
           <li class="main-nav__item">
-            <a href="#" title="Вязание на заказ">Вязание на заказ</a>
+            <a href="form.html" title="Вязание на заказ">Вязание на заказ</a>
           </li>
           <li class="main-nav__item">
             <a href="#" title="Поиск по сайту">Поиск по сайту</a>
@@ -61,7 +62,7 @@
               <div>15 см</div>
             </li>
           </ul>
-          <img src="http://placehold.it/260x315" title="Товар недели" alt="Товар недели">
+          <img src="img/triple-set-mobile@1x.jpg" title="Товар недели" alt="Товар недели">
           <span class="weekend-product__price">Цена: 990 руб.</span>
           <a href="#" class="btn" title="Заказать">Заказать</a>
         </div>
@@ -103,19 +104,20 @@
           </li>
         </ul>
         <div class="contacts__map">
-          <img src="http://placehold.it/320x457" title="" alt="">
+          <img src="img/map-mobile@1x.jpg" title="Карта проезда" alt="Карта проезда">
+          <div class="contacts__pin"></div>
         </div>
         <a href="#" class="btn" title="Напишите нам">Напишите нам</a>
       </section>
     </main>
 
     <footer class="page-footer">
-      <ul class="contacts__social">
-        <li class="contacts__social-block contacts__social-block--igm"><a href="#" title="Инстаграм"></a></li>
-        <li class="contacts__social-block contacts__social-block--fb"><a href="#" title="Фейсбук"></a></li>
-        <li class="contacts__social-block contacts__social-block--tw"><a href="#" title="Твиттер"></a></li>
+      <ul class="page-footer__social">
+        <li class="page-footer__social-block page-footer__social-block--igm"><a href="#" title="Инстаграм"></a></li>
+        <li class="page-footer__social-block page-footer__social-block--fb"><a href="#" title="Фейсбук"></a></li>
+        <li class="page-footer__social-block page-footer__social-block--tw"><a href="#" title="Твиттер"></a></li>
       </ul>
-      <div class="contacts__dev">
+      <div class="page-footer__dev">
         <a href="#" title="">Разработано</a>
       </div>
     </footer>
