Less+Gulp automatization - fonts + outlines + other corrections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
-    <link rel="stylesheet" href="/css/style.css"
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -44,7 +44,7 @@
         </nav>
       </section>
       <section class="weekend-product">
-        <h2>Вязанные корзинки</h2>
+        <h2>Вязаные корзинки</h2>
         <b class="week-product__subtitle">Товар недели</b>
         <div class="weekend-product__info">
           <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
@@ -63,7 +63,7 @@
             </li>
           </ul>
           <img src="img/triple-set-mobile@1x.jpg" title="Товар недели" alt="Товар недели">
-          <span class="weekend-product__price">Цена: 990 руб.</span>
+          <div class="weekend-product__price">Цена: 990 руб.</div>
           <a href="#" class="btn" title="Заказать">Заказать</a>
         </div>
       </section>
@@ -82,8 +82,8 @@
         <h2>Отзывы</h2>
         <div class="feedback__item">
           <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-          <span class="feedback__author-fio">Анастасия Красильникова</span>
-          <span class="feedback__autor-login">@misssssiskras</span>
+          <div class="feedback__author-fio">Анастасия Красильникова</div>
+          <a href="#" title="@misssssiskras" class="feedback__author-login">@misssssiskras</a>
         </div>
         <div class="feedback__navigation">
           <button class="feedback__btn feedback__btn--prev"></button>
