--- a/catalog.html
+++ b/catalog.html
@@ -3,92 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка - каталог</title>
-    <link rel="stylesheet" href="/css/style.css"
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__logo">
-        <a href="/" title="Мишка - главная страница">
-          <img src="img/logo-mobile.svg" width="86" height="35" alt="Мишка лого" title="Мишка лого">
-        </a>
-      </div>
-      <nav class="main-nav main-nav--closed">
-        <button class="main-nav__burger-menu main-nav__burger-menu--burger-tap"></button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a href="#" title="Каталог товаров">Каталог товаров</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html" title="Вязание на заказ">Вязание на заказ</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#" title="Поиск по сайту">Поиск по сайту</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#" title="Корзина">Корзина: пока пуста</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <main class="main-inner">
-      <section class="catalog">
-        <h1>Каталог товаров</h1>
-        <div class="catalog__item">
-          <a href="#" title="Зайчик-попрыгайчик">
-            <img src="img/photo-1-mobile@1x.jpg" title="Зайчик-попрыгайчик" alt="Зайчик-попрыгайчик">
-          </a>
-          <div class="catalog__product-info">
-            <a href="#" title="Зайчик-попрыгайчик">Зайчик-попрыгайчик</a>
-            <p class="catalog__product-text">Рост 30 см, вес 200 г</p>
-            <div class="catalog__price">1 200 руб.</div>
-            <a href="#" class="catalog__bucket" title="Зайчик-попрыгайчик"></a>
-          </div>
+      <div class="page-header__container">
+          <div class="page-header__logo"></div>
+          <nav class="main-nav main-nav--closed main-nav--nojs">
+            <ul class="main-nav__list"></ul>
+            <ul class="main-nav__user-list"></ul>
+            <ul class="main-nav__sub-list"></ul>
+          </nav>
+          <div class="page-header__free-delivery"></div>
         </div>
-        <div class="catalog__item">
-          <a href="#" title="Корзинка для белья">
-            <img src="img/photo-2-mobile@1x.jpg" title="Корзинка для белья" alt="Корзинка для белья">
-          </a>
-          <div class="catalog__product-info">
-            <a href="#" title="Корзинка для белья">Корзинка для белья</a>
-            <p class="catalog__product-text">Диаметр 15 см, высота 10 см</p>
-            <div class="catalog__price">690 руб.</div>
-            <a href="#" class="catalog__bucket" title="Зайчик-попрыгайчик"></a>
-          </div>
-        </div>
-        <div class="catalog__item">
-          <a href="#" title="Большая корзинка для игрушек">
-            <img src="img/photo-3-mobile@1x.jpg" title="Большая корзинка для игрушек" alt="Большая корзинка для игрушек">
-          </a>
-          <div class="catalog__product-info">
-            <a href="#" title="Большая корзинка для игрушек">Большая корзинка для игрушек</a>
-            <p class="catalog__product-text">Диаметр 30 см, высота 30 см</p>
-            <div class="catalog__price">1 500 руб.</div>
-            <a href="#" class="catalog__bucket" title="Зайчик-попрыгайчик"></a>
-          </div>
-        </div>
-      </section>
-      <section class="process">
-        <h2>Процесс производства</h2>
-        <div class="process__video">
-          <img src="img/video-mobile@1x.jpg" alt="Заглушка для видео" title="Заглушка для видео">
-          <button class="video-btn"></button>
-        </div>
-        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="btn" href="#" title="Сделать заказ">Сделать заказ</a>
-      </section>
-
-    </main>
-
-    <footer class="page-footer">
-      <ul class="page-footer__social">
-        <li class="page-footer__social-block page-footer__social-block--igm"><a href="#" title="Инстаграм"></a></li>
-        <li class="page-footer__social-block page-footer__social-block--fb"><a href="#" title="Фейсбук"></a></li>
-        <li class="page-footer__social-block page-footer__social-block--tw"><a href="#" title="Твиттер"></a></li>
-      </ul>
-      <div class="page-footer__dev">
-        <a href="#" title="">Разработано</a>
-      </div>
-    </footer>
+        </header>
+        <main class="main-inner">
+          <section class="catalog">
+            <div class="catalog__item">
+              <div class="catalog__product-info">
+                <div class="catalog__price"></div>
+              </div>
+            </div>
+            <div class="catalog__item">
+              <div class="catalog__product-info">
+                <div class="catalog__price"></div>
+              </div>
+            </div>
+            <div class="catalog__item">
+              <div class="catalog__product-info">
+                <div class="catalog__price"></div>
+              </div>
+            </div>
+          </section>
+          <section class="process">
+            <div class="process__video"></div>
+          </section>
+        </main>
+        <footer class="page-footer">
+          <div class="page-footer__logo"></div>
+          <ul class="page-footer__social"></ul>
+          <div class="page-footer__dev"></div>
+        </footer>
   </body>
 </html>
