--- a/index.html
+++ b/index.html
@@ -3,123 +3,100 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__logo">
-        <img src="img/logo-mobile.svg" width="86" height="35" alt="Мишка лого" title="Мишка лого">
-      </div>
-      <nav class="main-nav main-nav--closed">
-        <button class="main-nav__burger-menu main-nav__burger-menu--burger-tap"></button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a href="catalog.html" title="Каталог товаров">Каталог товаров</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html" title="Вязание на заказ">Вязание на заказ</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#" title="Поиск по сайту">Поиск по сайту</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#" title="Корзина">Корзина: пока пуста</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-    <main class="main-inner">
-      <section class="main-page-category">
-        <h1>Милые штучки ручной работы для дома</h1>
-        <nav class="main-page-nav">
-          <ul class="main-page-nav__list">
-            <li class="main-page-nav__item">
-              <a href="#" title="Предметы интерьера">Предметы интерьера</a>
+      <div class="page-header__container">
+        <div class="page-header__logo">
+          <img src="img/logo-mobile.svg" width="86" height="35" alt="Мишка лого" title="Мишка лого">
+        </div>
+        <nav class="main-nav main-nav--closed main-nav--nojs">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a href="catalog.html" title="Каталог товаров">Каталог товаров</a>
             </li>
-            <li class="main-page-nav__item">
-              <a href="#" title="Детские игрушки">Детские игрушки</a>
+            <li class="main-nav__item">
+              <a href="form.html" title="Вязание на заказ">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="main-nav__user-list">
+            <li class="main-nav__item">
+              <a href="#" title="Поиск по сайту">Поиск по сайту</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#" title="Корзина">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="main-nav__sub-list">
+            <li class="main-nav__item">
+              <a href="#" title="Новые поступления">Новые поступления</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#" title="Распродажа">Распродажа</a>
             </li>
           </ul>
         </nav>
-      </section>
-      <section class="weekend-product">
-        <h2>Вязаные корзинки</h2>
-        <b class="week-product__subtitle">Товар недели</b>
-        <div class="weekend-product__info">
-          <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-          <ul class="weekend-product__desc">
-            <li class="weekend-product__desc-item">
-              <div>Цвет</div>
-              <div>«Тиффани»/серый</div>
-            </li>
-            <li class="weekend-product__desc-item">
-              <div>Диаметр:</div>
-              <div>25 см</div>
-            </li>
-            <li class="weekend-product__desc-item">
-              <div>Высота:</div>
-              <div>15 см</div>
-            </li>
-          </ul>
-          <img src="img/triple-set-mobile@1x.jpg" title="Товар недели" alt="Товар недели">
-          <div class="weekend-product__price">Цена: 990 руб.</div>
-          <a href="#" class="btn" title="Заказать">Заказать</a>
+        <div class="page-header__free-delivery"></div>
         </div>
-      </section>
-      <section class="about-us">
-        <h2>Коротко о нас</h2>
-        <ul class="about-us__list">
-          <li class="about-us__item">Экологически чистые материалы</li>
-          <li class="about-us__item">Скандинавский стиль по российской цене</li>
-          <li class="about-us__item">Увеличивает лайки на фотографиях</li>
-          <li class="about-us__item">Связано вручную с любовью и умилением</li>
-          <li class="about-us__item">Поддержка отечественного производителя</li>
-          <li class="about-us__item">Поставляется в подарочной упаковке</li>
-        </ul>
-      </section>
-      <section class="feedback">
-        <h2>Отзывы</h2>
-        <div class="feedback__item">
-          <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-          <div class="feedback__author-fio">Анастасия Красильникова</div>
-          <a href="#" title="@misssssiskras" class="feedback__author-login">@misssssiskras</a>
-        </div>
-        <div class="feedback__navigation">
-          <button class="feedback__btn feedback__btn--prev"></button>
-          <button class="feedback__btn feedback__btn--next"></button>
-        </div>
-          <a href="#" class="btn" title="Написать">Написать</a>
-      </section>
-      <section class="contacts">
-        <h2>Контакты</h2>
-        <ul class="contacts__desc">
-          <li class="contacts__desc-item">
-            <div>e-mail:</div>
-            <div><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></div>
-          </li>
-          <li class="contacts__desc-item">
-            <div>адрес:</div>
-            <div>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</div>
-          </li>
-        </ul>
-        <div class="contacts__map">
-          <img src="img/map-mobile@1x.jpg" title="Карта проезда" alt="Карта проезда">
-          <div class="contacts__pin"></div>
-        </div>
-        <a href="#" class="btn" title="Напишите нам">Напишите нам</a>
-      </section>
-    </main>
-
-    <footer class="page-footer">
-      <ul class="page-footer__social">
-        <li class="page-footer__social-block page-footer__social-block--igm"><a href="#" title="Инстаграм"></a></li>
-        <li class="page-footer__social-block page-footer__social-block--fb"><a href="#" title="Фейсбук"></a></li>
-        <li class="page-footer__social-block page-footer__social-block--tw"><a href="#" title="Твиттер"></a></li>
-      </ul>
-      <div class="page-footer__dev">
-        <a href="#" title="">Разработано</a>
-      </div>
-    </footer>
+        </header>
+        <main class="main-inner">
+          <section class="main-page-category">
+            <h1>Милые штуки ручной<br />работы для дома</h1>
+            <nav class="main-page-nav">
+              <ul class="main-page-nav__list">
+                <li class="main-page-nav__item">
+                  <a href="#" title="Предметы интерьера">Предметы интерьера</a>
+                </li>
+                <li class="main-page-nav__item">
+                  <a href="#" title="Детские игрушки">Детские игрушки</a>
+                </li>
+              </ul>
+            </nav>
+          </section>
+          <section class="weekend-product">
+            <h2>Вязаные корзинки</h2>
+            <h3 class="week-product__subtitle">Товар недели</h3>
+            <div class="weekend-product__info">
+              <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+              <div class="weekend-product__desc">
+                <ul class="weekend-product__desc-item">
+                  <li>Цвет:</li>
+                  <li>«Тиффани»/серый</li>
+                </ul>
+                <ul class="weekend-product__desc-item">
+                  <li>Диаметр:</li>
+                  <li>25 см</li>
+                </ul>
+                <ul class="weekend-product__desc-item">
+                  <li>Высота:</li>
+                  <li>15 см</li>
+                </ul>
+              </div>
+              <img src="img/triple-set-mobile@1x.jpg" title="Товар недели" alt="Товар недели">
+              <div class="weekend-product__price">Цена: 990 руб.</div>
+              <a href="#" class="btn" title="Заказать">Заказать</a>
+            </div>
+          </section>
+          <section class="about-us">
+            <ul class="about-us__list"></ul>
+          </section>
+          <section class="feedback">
+            <div class="feedback__item"></div>
+            <div class="feedback__navigation"></div>
+          </section>
+          <section class="contacts">
+            <ul class="contacts__desc"></ul>
+            <div class="contacts__map">
+              <div class="contacts__pin"></div>
+            </div>
+          </section>
+        </main>
+        <footer class="page-footer">
+          <div class="page-footer__logo"></div>
+          <ul class="page-footer__social"></ul>
+          <div class="page-footer__dev"></div>
+        </footer>
   </body>
 </html>
