--- a/index.html
+++ b/index.html
@@ -9,74 +9,29 @@
   <body>
     <header class="page-header">
       <div class="page-header__container">
-        <div class="page-header__logo">
-          <img src="img/logo-mobile.svg" width="86" height="35" alt="Мишка лого" title="Мишка лого">
-        </div>
-        <nav class="main-nav main-nav--closed main-nav--nojs">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a href="catalog.html" title="Каталог товаров">Каталог товаров</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="form.html" title="Вязание на заказ">Вязание на заказ</a>
-            </li>
-          </ul>
-          <ul class="main-nav__user-list">
-            <li class="main-nav__item">
-              <a href="#" title="Поиск по сайту">Поиск по сайту</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#" title="Корзина">Корзина: пока пуста</a>
-            </li>
-          </ul>
-          <ul class="main-nav__sub-list">
-            <li class="main-nav__item">
-              <a href="#" title="Новые поступления">Новые поступления</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#" title="Распродажа">Распродажа</a>
-            </li>
-          </ul>
+        <div class="page-header__logo"></div>
+        <nav class="main-nav main-nav--nojs">
+          <ul class="main-nav__list"></ul>
+          <ul class="main-nav__user-list"></ul>
+          <ul class="main-nav__sub-list"></ul>
         </nav>
         <div class="page-header__free-delivery"></div>
         </div>
         </header>
         <main class="main-inner">
           <section class="main-page-category">
-            <h1>Милые штуки ручной<br />работы для дома</h1>
             <nav class="main-page-nav">
-              <ul class="main-page-nav__list">
-                <li class="main-page-nav__item">
-                  <a href="#" title="Предметы интерьера">Предметы интерьера</a>
-                </li>
-                <li class="main-page-nav__item">
-                  <a href="#" title="Детские игрушки">Детские игрушки</a>
-                </li>
-              </ul>
+              <ul class="main-page-nav__list"></ul>
             </nav>
           </section>
           <section class="weekend-product">
-            <h2>Вязаные корзинки</h2>
-            <h3 class="week-product__subtitle">Товар недели</h3>
             <div class="weekend-product__info">
-              <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
               <div class="weekend-product__desc">
-                <ul class="weekend-product__desc-item">
-                  <li>Цвет:</li>
-                  <li>«Тиффани»/серый</li>
-                </ul>
-                <ul class="weekend-product__desc-item">
-                  <li>Диаметр:</li>
-                  <li>25 см</li>
-                </ul>
-                <ul class="weekend-product__desc-item">
-                  <li>Высота:</li>
-                  <li>15 см</li>
-                </ul>
+                <ul class="weekend-product__desc-item"></ul>
+                <ul class="weekend-product__desc-item"></ul>
+                <ul class="weekend-product__desc-item"></ul>
               </div>
-              <img src="img/triple-set-mobile@1x.jpg" title="Товар недели" alt="Товар недели">
-              <div class="weekend-product__price">Цена: 990 руб.</div>
-              <a href="#" class="btn" title="Заказать">Заказать</a>
+              <div class="weekend-product__price"></div>
             </div>
           </section>
           <section class="about-us">
